Complete full html and css part

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -41,13 +41,17 @@
           </div>
         </div>
         <div class="output-box">
-          Tip Amount
-          / person
-
-          Total
-          / person
-
-          Reset
+          <div class="tip-title">
+            <div class="title-main">Tip Amount</div>
+            <div class="title-sub">/ person</div>
+          </div>
+          <div class="output-result">$4.27</div>
+          <div class="tip-title">
+            <div class="title-main">Total</div>
+            <div class="title-sub">/ person</div>
+          </div>
+          <div class="output-result">$32.79</div>
+          <button class="resetButton">Reset</button>
         </div>
       </div>
     </div>
