make the website responsive

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="grid-container">
     <div class="logo-container">
-      <img src="images/logo.svg" alt="logo" class="logo" height="50px">
+      <img src="images/logo.svg" alt="logo" class="logo" width="90px">
     </div>
     <div class="tool-container">
       <div class="tool-box">
@@ -47,7 +47,7 @@
           </div>
           <div class="output-result" id="tipPerPerson">$0.00</div>
           <div class="tip-title">
-            <div class="title-main">Total</div>
+            <div class="title-main">Total Bill</div>
             <div class="title-sub">/ person</div>
           </div>
           <div class="output-result" id="billPerPerson">$0.00</div>
